# edbgserver

./: .gdb_history  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  README_zh.md  debug.gdb  debug.sh  todo.md
.cargo/: config.toml
.github/workflows/: release.yml
.zed/: setting.json  settings.json
edbgserver/: Cargo.toml  README.md
edbgserver-cli/: Cargo.toml  build.rs
edbgserver-cli/src/: connection.rs  event.rs  main.rs  proc.rs  resolve_target.rs  target.rs  utils.rs  virtual_file.rs
edbgserver-cli/tests/: integration_test.rs
edbgserver-cli/tests/test_target/: test_target  test_target.c
edbgserver-common/: Cargo.toml
edbgserver-common/src/: lib.rs
edbgserver-ebpf/: Cargo.toml
edbgserver-ebpf/src/: main.rs
edbgserver/edbgserver/: Cargo.toml
edbgserver/edbgserver-common/: Cargo.toml
edbgserver/edbgserver-common/src/: lib.rs
edbgserver/edbgserver-ebpf/: Cargo.toml
edbgserver/edbgserver-ebpf/src/: main.rs
edbgserver/edbgserver/src/: main.rs
edbgserver/edbgserver/tests/test_target/: test_target  test_target.c
