[workspace]
resolver = "2"
members = [
    "edbgserver-cli",
    "edbgserver-common",
    "edbgserver-ebpf",
]
default-members = ["edbgserver-cli", "edbgserver-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
# TODO: switch back to official aya
# aya = { git = "https://github.com/aya-rs/aya", rev = "d238b2ea6f1b2c1aa09a9050415b1c96329af0aa", default-features = false }
# aya-build = { git = "https://github.com/aya-rs/aya", rev = "d238b2ea6f1b2c1aa09a9050415b1c96329af0aa", default-features = false }
# aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "d238b2ea6f1b2c1aa09a9050415b1c96329af0aa", default-features = false }
# aya-log = { git = "https://github.com/aya-rs/aya", rev = "d238b2ea6f1b2c1aa09a9050415b1c96329af0aa", default-features = false }
# aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "d238b2ea6f1b2c1aa09a9050415b1c96329af0aa", default-features = false }
aya = { git = "https://github.com/Satar07/aya/", rev = "5e7f49d", default-features = false }
aya-build = { git = "https://github.com/Satar07/aya/", rev = "5e7f49d", default-features = false }
aya-ebpf = { git = "https://github.com/Satar07/aya/", rev = "5e7f49d", default-features = false }
aya-log = { git = "https://github.com/Satar07/aya/", rev = "5e7f49d", default-features = false }
aya-log-ebpf = { git = "https://github.com/Satar07/aya/", rev = "5e7f49d", default-features = false }


anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }

clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", features = ["full"] }
which = { version = "6.0.0", default-features = false }

[profile.dev]
debug = true
opt-level = 0

[profile.release.package.edbgserver-ebpf]
debug = 2
codegen-units = 1
