[package]
name = "edbgserver-cli"
version = "1.0.1"
edition.workspace = true
description = "CLI for edbgserver: A GDB stub powered by eBPF"
repository = "https://github.com/Satar07/edbgserver"
license.workspace = true

[dependencies]
edbgserver-common = { path = "../edbgserver-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
pretty_env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["cargo", "color", "default", "derive"] }
serial_test = "3.2.0"
gdbstub = "0.7.9"
gdbstub_arch = "0.3.2"
procfs = "0.18.0"
process-memory = "0.5.0"
nix = {version = "0.30.1", features = ["resource", "poll"]}
capstone = "0.13.0"
clap-num = "1.2.0"
zip = "6.0.0"
zerocopy = {version= "0.8.31", features = ["derive"] }
goblin = "0.10.4"
tagu = "0.1.6"
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
edbgserver-ebpf = { path = "../edbgserver-ebpf" }

[[bin]]
name = "edbgserver"
path = "src/main.rs"
