[package]
name = "edbgserver-common"
version = "1.0.0"
edition.workspace = true
description = "Common library for edbgserver"
repository = "https://github.com/Satar07/edbgserver"
license.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(bpf_target_arch, values("x86_64", "aarch64"))'
] }
