[package]
name = "edbgserver-ebpf"
version = "1.0.0"
edition.workspace = true
description = "EBPF library for edbgserver"
repository = "https://github.com/Satar07/edbgserver"
publish = true

[dependencies]
edbgserver-common = { path = "../edbgserver-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "edbgserver"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(bpf_target_arch, values("x86_64", "aarch64"))'
] }
